--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@ h3 {
 <a href="./menu.html">menu</a>
 <a href="./index.our_services">our_services</a>
 <html>
-<h1><img src="logo.JPG" alt="Eddy's Place">The Restaurant</h1>
+<h1><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.41.jpeg" alt="Eddy's Place">The Restaurant</h1>
 <p>Eddy's Place offers casual lunch and dinner fare in a relaxed
 atmosphere. The menu changes regularly to highlight the freshest local
 ingredients.</p>
 
-<h2>Catering</h2>
+<h3>Catering</h3>
 <p>You have fun. We'll handle the cooking. Black Goose Catering can handle
 events from snacks for a meetup to elegant corporate fundraisers.</p>
 
-<h3>Location and Hours</h3>
+<h4>Location and Hours</h4>
 <p>Monrovia Street;
 Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to
 midnight</p>
