--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@ h3 {
 <a href="./index.our_services">our_services</a>
 <html>
 <h1><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.41.jpeg" alt="Eddy's Place">The Restaurant</h1>
+
+<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.43 (2).jpeg"
+</nav>
 <p>Eddy's Place offers casual lunch and dinner fare in a relaxed
 atmosphere. The menu changes regularly to highlight the freshest local
 ingredients.</p>
 
-<h3>Catering</h3>
+<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.42.jpeg"
+
+</nav>
+
+<h3>Catering<img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.42 (1).jpeg"></h3>
 <p>You have fun. We'll handle the cooking. Black Goose Catering can handle
 events from snacks for a meetup to elegant corporate fundraisers.</p>
 
@@ -53,6 +60,8 @@ events from snacks for a meetup to elegant corporate fundraisers.</p>
 <p>Monrovia Street;
 Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to
 midnight</p>
+<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.43.jpeg" 
+</nav>
 
 </body>
 </html>
