--- a/our_services.html
+++ b/our_services.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <a href="./index.html">Home</a>
-<a href="./menu.html">Home</a>
+<a href="./menus.html">Home</a>
 <a href="./index.our_services">Home</a>
 <html>
 <head>
