--- a/index.html
+++ b/index.html
@@ -40,27 +40,34 @@ h3 {
 <a href="./menu.html">menu</a>
 <a href="./index.our_services">our_services</a>
 <html>
-<h1><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.41.jpeg" alt="Eddy's Place">The Restaurant</h1>
+<h1><img src="https://www.dropbox.com/s/fhdk5pzua2uxpgd/WhatsApp%20Image%202022-11-16%20at%2012.38.41.jpeg?dl=0" alt="Eddy's Place">The Restaurant</h1>
 
-<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.43 (2).jpeg"
+<nav><img src="https://www.dropbox.com/s/3g62j4uwfjnp804/WhatsApp%20Image%202022-11-16%20at%2012.38.42.jpeg?dl=0"
 </nav>
 <p>Eddy's Place offers casual lunch and dinner fare in a relaxed
 atmosphere. The menu changes regularly to highlight the freshest local
 ingredients.</p>
 
-<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.42.jpeg"
+<nav><img src="https://www.dropbox.com/s/036cm1roghgv0yr/WhatsApp%20Image%202022-11-16%20at%2012.38.42%281%29.jpeg?dl=0"
 
 </nav>
 
-<h3>Catering<img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.42 (1).jpeg"></h3>
+<h3>Catering<img src="https://www.dropbox.com/s/pb9d60r8fbfv7hv/WhatsApp%20Image%202022-11-16%20at%2012.38.43.jpeg?dl=0"></h3>
 <p>You have fun. We'll handle the cooking. Black Goose Catering can handle
 events from snacks for a meetup to elegant corporate fundraisers.</p>
+<nav>
 
+   <img src="https://www.dropbox.com/s/6pz4dyk6snb4gte/WhatsApp%20Image%202022-11-16%20at%2012.38.43%281%29.jpeg?dl=0"
+
+</nav>
+</nav><nav>
+   <img src="https://www.dropbox.com/s/6pz4dyk6snb4gte/WhatsApp%20Image%202022-11-16%20at%2012.38.43%281%29.jpeg?dl=0"
+</nav>
 <h4>Location and Hours</h4>
 <p>Monrovia Street;
 Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to
 midnight</p>
-<nav><img src="/home/jay/Documents/nav.jpg/WhatsApp Image 2022-11-16 at 12.38.43.jpeg" 
+<nav><img src="https://www.dropbox.com/s/pb9d60r8fbfv7hv/WhatsApp%20Image%202022-11-16%20at%2012.38.43.jpeg?dl=0" 
 </nav>
 
 </body>
