--- a/index.html
+++ b/index.html
@@ -40,22 +40,43 @@ h3 {
 <a href="./menu.html">menu</a>
 <a href="./index.our_services">our_services</a>
 <html>
-<h1><img src="https://www.dropbox.com/s/fhdk5pzua2uxpgd/WhatsApp%20Image%202022-11-16%20at%2012.38.41.jpeg?dl=0" alt="Eddy's Place">The Restaurant</h1>
+   <div>
+<h1>
+   <h1 style="text-align:center;"></h1> 
+   <a href="https://www.dropbox.com/s/fhdk5hpzua2uxpgd/WhatsApp%20Image%202022-11-16%20at%2012.38.41.jpeg?dl=0" target="blank" >
+   
+   
+     <img src="https://www.dropbox.com/s/fhdk5hpzua2uxpgd/WhatsApp%20Image%202022-11-16%20at%2012.38.41.jpeg?dl=0" alt="Eddy's Place">The Restaurant
+   </a>
+   </h1>
+     </div>
+   </div>
 
+   <div>
+      
 <nav><img src="https://www.dropbox.com/s/3g62j4uwfjnp804/WhatsApp%20Image%202022-11-16%20at%2012.38.42.jpeg?dl=0"
 </nav>
+
+<div>
+<div>
 <p>Eddy's Place offers casual lunch and dinner fare in a relaxed
 atmosphere. The menu changes regularly to highlight the freshest local
 ingredients.</p>
 
+<div>
+
 <nav><img src="https://www.dropbox.com/s/036cm1roghgv0yr/WhatsApp%20Image%202022-11-16%20at%2012.38.42%281%29.jpeg?dl=0"
 
 </nav>
-
+<div>
 <h3>Catering<img src="https://www.dropbox.com/s/pb9d60r8fbfv7hv/WhatsApp%20Image%202022-11-16%20at%2012.38.43.jpeg?dl=0"></h3>
 <p>You have fun. We'll handle the cooking. Black Goose Catering can handle
 events from snacks for a meetup to elegant corporate fundraisers.</p>
+
+</div>
 <nav>
+
+   <
 
    <img src="https://www.dropbox.com/s/6pz4dyk6snb4gte/WhatsApp%20Image%202022-11-16%20at%2012.38.43%281%29.jpeg?dl=0"
 
@@ -68,7 +89,14 @@ events from snacks for a meetup to elegant corporate fundraisers.</p>
 Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to
 midnight</p>
 <nav><img src="https://www.dropbox.com/s/pb9d60r8fbfv7hv/WhatsApp%20Image%202022-11-16%20at%2012.38.43.jpeg?dl=0" 
+
+</a>
 </nav>
+</div>
+
+</div>
+</div>
+</div>
 
 </body>
 </html>
